--- a/1.html
+++ b/1.html
@@ -60,11 +60,11 @@ body {
 }
 
 div {
-  border:1px solid #fff;
+/*   border:1px solid #fff; */
 }
 
 span {
-  border:1px solid red;
+/*   border:1px solid red; */
 }
 
 cite a {
@@ -192,7 +192,7 @@ cite a {
         </cite>        
        </span>
        <span>
-         <strong>Working At: </strong><a href="https://www.valuelabs.com/" target="_blank">ValueLabs</a>
+         <strong class="inconsolata-contact-info">Working At: </strong><a href="https://www.valuelabs.com/" target="_blank">ValueLabs</a>
          <div id="exp" class="inconsolata-contact-info"></div>
       </span>
     </div>
