--- a/1.html
+++ b/1.html
@@ -79,13 +79,13 @@ cite a {
 }
 
 .image_wrapper {
-  background-color:#111;
+/*   background-color:#111; */
 }
 
 .image_wrapper img {
    height:auto;
    width: 100px;
-   mix-blend-mode: difference;
+   mix-blend-mode: darken;
    overflow:hidden;
 }
 .row_wrapper {
