Page cost plugin added

--- a/index.html
+++ b/index.html
@@ -349,6 +349,8 @@
       $('#exp').text("Total Exp: " + years + "." + months + " Years");
     });
   </script>
+  <link href="https://cdn.jsdelivr.net/gh/RamMohan222/web-widget-metrics-info@v1.0.8/output/index.css" rel="stylesheet" />
+  <script src="https://cdn.jsdelivr.net/gh/RamMohan222/web-widget-metrics-info@v1.0.8/output/index.js"></script>
 </body>
 
 </html>
