--- a/index.html
+++ b/index.html
@@ -304,28 +304,28 @@
       <span>
         <div class="sub_title">Experience:</div>
         <ul>
-          <li>ValueLabs, Hyderabad, from 3-May-2022 to till current date.</li>
+          <li><small>ValueLabs, Hyderabad, from 3-May-2022 to till current date.</small></li>
           <ul style="list-style-type:none;">
             <li>
               <h5><i>- As a System Analyst</i></h5>
             </li>
           </ul>
 
-          <li>Yash Technologies, Hyderabad, from 14-Aug-2020 to 3-May-2022</li>
+          <li><small>Yash Technologies, Hyderabad, from 14-Aug-2020 to 3-May-2022.</small></li>
           <ul style="list-style-type:none;">
             <li>
               <h5><i>- As a Module Lead</i></h5>
             </li>
           </ul>
 
-          <li>Neviton Softech Pvt ltd, Bangalore, from 10-July-2017 to 6-Aug-2020.</li>
+          <li><small>Neviton Softech Pvt ltd, Bangalore, from 10-July-2017 to 6-Aug-2020.</small></li>
           <ul style="list-style-type:none;">
             <li>
               <h5><i>- As a Senior Software Engineer</i></h5>
             </li>
           </ul>
 
-          <li>Sun KPO IT & Engineering Services, Hyderabad, from 15-Oct-2015 to 10-July-2017.</li>
+          <li><small>Sun KPO IT & Engineering Services, Hyderabad, from 15-Oct-2015 to 10-July-2017.</small></li>
           <ul style="list-style-type:none;">
             <li class="kalam-light">
               <h5><i>- As a Software Engineer</i></h5>
