Update bottom border fix

--- a/index.html
+++ b/index.html
@@ -116,6 +116,7 @@
 
     .border_bottom {
       border-bottom: 1px dotted #666;
+      width: 80vw;
     }
 
     .row {
@@ -147,7 +148,7 @@
       display: flex;
       align-items: center;
       column-gap: 10px;
-      justify-content: space-between;
+      justify-content: center;
     }
 
     #exp {
@@ -232,7 +233,7 @@
       <img src="https://ram222mohan.com/assets/profile.jpg" />
     </div>
     <section class="row border_bottom">
-      <div class="title kalam-regular"><span id="console-text"></span><div class='console-underscore' id='console'>&#95;</div></div>
+      <div class="title kalam-regular"><span id="console-text"></span><span class='console-underscore' id='console'>&#95;</span></div>
       <div class="contact_info inconsolata-contact-info">
         <div>
           <svg xmlns="http://www.w3.org/2000/svg" height="20px" viewBox="0 -960 960 960" width="20px" fill="#5f6368">
