--- a/index.html
+++ b/index.html
@@ -295,16 +295,16 @@
         <div class="sub_title">Skills:</div>
         <ul>
           <li><small>Java, Java EE, Servlet, JSP and JSTL</small></li>
-          <li><small>Spring/SpringBoot Framework <b>(MVC, JDBC, JPA, REST and Security).</b></small></li>
-          <li><small>Spring Cloud and Microservices, Hashicorp/Consul <b>(Eureka Discovery Server/Client, Configuration,
+          <li><small>Spring/SpringBoot Framework <b>(MVC, REST, JDBC, JPA, AOP, Batch and Security).</b></small></li>
+          <li><small>Spring Cloud and Microservices, Hashicorp/Consul, Hashicorp/Vault <b>(Eureka Discovery Server/Client, Configuration,
                 Ribbon, Hystrix, Feign and Zuul).</b></small></li>
-          <li><small>Prometheus, Grafana, wmi exporter.</small></li>
-          <li><small>JavaScript, ES6, Node Js, Express Js, React Js, Redux, Next Js, 11ty, Nunjucks, JQuery and
-              Ajax.</small></li>
+          <li><small>Prometheus, Grafana, wmi exporter and ELK and EFK</small></li>
+          <li><small>JavaScript, ES6, Node Js, Express Js, React Js, Redux, Next Js, 11ty, Nunjucks and JQuery</small></li>
           <li><small>Bootstrap, Material UI, tailwind UI and StyledComponents.</small></li>
-          <li><small>Amazon Web Services <b> (Lambda, API Gateway, Cognito, Kinesis, Glue, Athena, CloudWatch, EC2, IAM
-                and S3).</b></small></li>
+          <li><small>Amazon Web Services <b> (Lambda, API Gateway, Cognito, Kinesis, Glue, Athena, CloudWatch, EC2, IAM, S3, RDS
+                and Elastic Beanstalk).</b></small></li>
           <li><small>My SQL, MongoDB and Redis.</small></li>
+          <li><small>JUnit4/5, TestNg and Cucumber (BDD), Jest, MochaJs, testing-library/react, SinonJs and ChaiJs</small></li>
           <li><small>Tomcat and Nginx.</small></li>
           <li><small>Eslint, Prettier, SonarLint and SonarQube.</small></li>
           <li><small>Jira, Eclipse, STS, VS Code, GitHub, GitLab, Bitbucket, SVN, Jenkins, WinSCP, PuTTY, PM2, OpenSSL,
