--- a/index.html
+++ b/index.html
@@ -296,19 +296,16 @@
         <ul>
           <li><small>Java, Java EE, Servlet, JSP and JSTL</small></li>
           <li><small>Spring/SpringBoot Framework <b>(MVC, REST, JDBC, JPA, AOP, Batch and Security).</b></small></li>
-          <li><small>Spring Cloud and Microservices, Hashicorp/Consul, Hashicorp/Vault <b>(Eureka Discovery Server/Client, Configuration,
-                Ribbon, Hystrix, Feign and Zuul).</b></small></li>
-          <li><small>Prometheus, Grafana, wmi exporter and ELK and EFK</small></li>
-          <li><small>JavaScript, ES6, Node Js, Express Js, React Js, Redux, Next Js, 11ty, Nunjucks and JQuery</small></li>
+          <li><small>Spring Cloud and Microservices, Hashicorp/Consul, Hashicorp/Vault <b>(Eureka Discovery Server/Client, Configuration, Ribbon, Hystrix, Feign and Zuul).</b></small></li>
+          <li><small>Prometheus, Grafana, wmi exporter and ELK and EFK.</small></li>
+          <li><small>JavaScript, ES6, Node Js, Express Js, React Js, Redux, Next Js, 11ty, Nunjucks and JQuery.</small></li>
           <li><small>Bootstrap, Material UI, tailwind UI and StyledComponents.</small></li>
-          <li><small>Amazon Web Services <b> (Lambda, API Gateway, Cognito, Kinesis, Glue, Athena, CloudWatch, EC2, IAM, S3, RDS
-                and Elastic Beanstalk).</b></small></li>
+          <li><small>Amazon Web Services <b> (Lambda, API Gateway, Cognito, Kinesis, Glue, Athena, CloudWatch, EC2, IAM, S3, RDS and Elastic Beanstalk).</b></small></li>
+          <li><small>JUnit4/5, TestNg and Cucumber (BDD), Jest, MochaJs, testing-library/react, SinonJs and ChaiJs.</small></li>
           <li><small>My SQL, MongoDB and Redis.</small></li>
-          <li><small>JUnit4/5, TestNg and Cucumber (BDD), Jest, MochaJs, testing-library/react, SinonJs and ChaiJs</small></li>
           <li><small>Tomcat and Nginx.</small></li>
           <li><small>Eslint, Prettier, SonarLint and SonarQube.</small></li>
-          <li><small>Jira, Eclipse, STS, VS Code, GitHub, GitLab, Bitbucket, SVN, Jenkins, WinSCP, PuTTY, PM2, OpenSSL,
-              hashicorp/consul-template, MySQL Workbench, Postman and JMeter.</small></li>
+          <li><small>Jira, Eclipse, STS, VS Code, GitHub, GitLab, Bitbucket, SVN, Jenkins, WinSCP, PuTTY, PM2, OpenSSL, hashicorp/consul-template, MySQL Workbench, Postman and JMeter.</small></li>
         </ul>
       </span>
     </section>
@@ -352,7 +349,7 @@
       <span>
         <div class="sub_title">Eduction:</div>
         <ul>
-          <li><small>Master of Computer Applications from JKC College, Guntur (Acharya Nagarjuna University) in 2014</small></li>
+          <li><small>Master of Computer Applications from JKC College, Guntur (<strong>Acharya Nagarjuna University</strong>) in 2014.</small></li>
         </ul>
       </span>
     </section>
@@ -370,7 +367,7 @@
       console.log('totalMonths:', totalMonths, 'years:', years, 'months', months);
       $('#exp').text("Total Exp: " + years + "." + months + " Years");
 
-      consoleText(['RamaMohanaRao. M'], 'console-text',['#333']);
+      consoleText(['RamaMohanaRao. M', 'RamMohan. M'], 'console-text',['#333']);
     });
 
     function consoleText(words, id, colors) {
