--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@
           <li><small>JUnit4/5, TestNg and Cucumber (BDD), Jest, MochaJs, testing-library/react, SinonJs and ChaiJs.</small></li>
           <li><small>My SQL, MongoDB and Redis.</small></li>
           <li><small>Tomcat, JBoss EAP, Nginx and Apache HTTP Server(httpd). Embedded servers Tomcat, Jetty and Undertow.</small></li>
-          <li><small>Eslint, Prettier, SonarLint and SonarQube.</small></li>
+          <li><small>Eslint, Prettier, SonarLint, SonarQube, JaCoCo and SpotBug.</small></li>
           <li><small>Jira, Eclipse, STS, VS Code, GitHub, GitLab, Bitbucket, SVN, Jenkins, WinSCP, PuTTY, PM2, OpenSSL, hashicorp/consul-template, MySQL Workbench, Postman and JMeter.</small></li>
         </ul>
       </span>
