--- a/index.html
+++ b/index.html
@@ -38,7 +38,13 @@
   <link href="./fontawesome-free-5.10.2-web/css/brands.css" rel="stylesheet">
   <link href="./fontawesome-free-5.10.2-web/css/solid.css" rel="stylesheet">
   <title>RamaMohanaRao.M | Fullstack Dev</title>
-
+  <!-- Google Tag Manager -->
+  <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+  new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+  j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+  'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+  })(window,document,'script','dataLayer','GTM-5KGJZ4KK');</script>
+  <!-- End Google Tag Manager -->
   <style>
     :root {
       --body-background: #eee;
