--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@
 </script>
   <style>
     :root {
-      --body-background: #eee;
+      --body--background: #f5f5f5;
+      --paper-background: #eee;
       --title-color: #2c2a2a;
       --work-exp-background: #06ad06;
     }
@@ -106,7 +107,7 @@
     }
 
     body {
-      background-color: var(--body-background);
+      background-color: var(--body--background);
     }
 
     cite a {
@@ -127,6 +128,7 @@
       max-width: 700px;
       box-sizing: content-box;
       margin: 10px auto;
+      background-color: var(--paper-background);
     }
 
     .image_wrapper img {
